--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "client": "webpack-dev-server --open --mode development",
+    "start": "webpack --mode production --progress",
     "dev": "webpack --mode development",
     "build": "webpack --mode production --progress",
     "predeploy": "npm run dev",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
