--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": " webpack --mode production",
+    "client": "webpack-dev-server --open --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production --progress",
     "predeploy": "npm run dev",
