--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production --progress",
     "predeploy": "npm run dev",
+    "deploy": "gh-pages -d dist",
     "test": "jest"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.15.1",
+    "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
